--- a/templates/user/detail.html
+++ b/templates/user/detail.html
@@ -8,6 +8,8 @@
     <h1>User Detail</h1>
     <div>
         <p><strong>Username:</strong> {{ user.username }}</p>
+        <p><strong>Password:</strong> {{ user.password_hash }}</p>
+        <p><strong>Admin:</strong> {{ user.is_admin}}</p>
         <!-- Add more user details as needed -->
     </div>
 </body>
