added flask login stuff

--- a/templates/user/detail.html
+++ b/templates/user/detail.html
@@ -12,5 +12,9 @@
         <p><strong>Admin:</strong> {{ user.is_admin}}</p>
         <!-- Add more user details as needed -->
     </div>
+
+    <div>
+        
+    </div>
 </body>
 </html>
