fixed bug for sqlalchemy and fixed blueprints cirular imports

--- a/insurance_app/blueprints/user/templates/login.html
+++ b/insurance_app/blueprints/user/templates/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>User Login</h1>
-    <form method="post" action="{{ url_for('user_login') }}">
+    <form method="post" action="{{ url_for('user.login') }}">
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username" required><br><br>
 
