--- a/insurance_app/blueprints/user/templates/create.html
+++ b/insurance_app/blueprints/user/templates/create.html
@@ -6,18 +6,12 @@
 </head>
 <body>
     <h1>Create a New User</h1>
-    <form method="post" action="{{ url_for('user_create') }}">
+    <form method="post" action="{{ url_for('user.create') }}">
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username" required><br><br>
 
         <label for="password">Password<br>
         <input type="password" id="password" name="password" required><br><br>
-
-        <!-- <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br><br> -->
-
-        <!-- Add more fields as needed for your user creation form -->
-
         <button type="submit">Create User</button>
     </form>
 </body>
