--- a/flask_app/app/blueprints/auth/templates/login.html
+++ b/flask_app/app/blueprints/auth/templates/login.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Create User</title>
+    <title>User Login</title>
     <!-- Include any CSS stylesheets or scripts you need -->
 </head>
 <body>
-    <h1>Create a New User</h1>
-    <form method="post" action="{{ url_for('user.create') }}">
+    <h1>User Login</h1>
+    <form method="post" action="{{ url_for('.login') }}">
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username" required><br><br>
 
-        <label for="password">Password<br>
+        <label for="password">Password:</label><br>
         <input type="password" id="password" name="password" required><br><br>
-        <button type="submit">Create User</button>
+
+        <button type="submit">Login</button>
     </form>
+
+
+    {% if error %}
+        <div>{{ error }}</div>
+    {% endif %}
 </body>
 </html>
