--- a/flask_app/app/blueprints/auth/templates/login.html
+++ b/flask_app/app/blueprints/auth/templates/login.html
@@ -15,6 +15,11 @@
             {{ form.password.label }}<br>
             {{ form.password(size=32) }}
         </p>
+        <input
+        type="hidden"
+        name="next"
+        value="{{ request.args.get('next', '') }}"
+        />
         <p>{{ form.submit() }}</p>
     </form>
     {% with messages = get_flashed_messages() %}
