html templates now extend base.html

--- a/flask_app/app/blueprints/auth/templates/detail.html
+++ b/flask_app/app/blueprints/auth/templates/detail.html
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>User Detail</title>
-    <!-- Include any CSS stylesheets or scripts you need -->
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
     <h1>User Detail</h1>
     <div>
         <p><strong>Username:</strong> {{ user.username }}</p>
-        <p><strong>Password:</strong> {{ user.password_hash }}</p>
-        <p><strong>Admin:</strong> {{ user.is_admin}}</p>
+        <p><strong>Email:</strong> {{ user.email }} </p> <!-- Assuming you might want to show the email -->
+        <p><strong>Password Hash:</strong> {{ user.password_hash }}</p> <!-- Reminder: Exposing password hashes in UI is not recommended -->
+        <p><strong>Admin:</strong> {{ user.is_admin }}</p>
         <!-- Add more user details as needed -->
     </div>
-
-    <div>
-        
-    </div>
-</body>
-</html>
+{% endblock %}
