--- a/flask_app/app/blueprints/auth/templates/register.html
+++ b/flask_app/app/blueprints/auth/templates/register.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Register</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
     <h2>Register</h2>
     <form method="POST" action="{{ url_for('auth.register') }}">
         {{ form.hidden_tag() }}
@@ -18,13 +15,12 @@
         <p>{{ form.submit() }}</p>
     </form>
     {% with messages = get_flashed_messages() %}
-    {% if messages %}
-      <ul class=flashes>
-      {% for message in messages %}
-        <li>{{ message }}</li>
-      {% endfor %}
-      </ul>
-    {% endif %}
-  {% endwith %}
-</body>
-</html>
+        {% if messages %}
+          <ul class=flashes>
+          {% for message in messages %}
+            <li>{{ message }}</li>
+          {% endfor %}
+          </ul>
+        {% endif %}
+    {% endwith %}
+{% endblock %}
