local db is not working but push code incase we need code in future

--- a/flask_app/app/templates/auth/login.html
+++ b/flask_app/app/templates/auth/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h2>Login</h2>
-    <form method="POST" action="{{ url_for('auth.login') }}">
+    <form method="POST" action="{{ url_for('.login') }}">
         {{ form.hidden_tag() }}
         <p>
             {{ form.username.label }}<br>
