--- a/flask_app/app/templates/auth/register.html
+++ b/flask_app/app/templates/auth/register.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h2>Register</h2>
-    <form method="POST" action="{{ url_for('auth.register') }}">
+    <form method="POST" action="{{ url_for('.register') }}">
         {{ form.hidden_tag() }}
         <p>
             {{ form.username.label }}<br>
