--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -1,17 +1,41 @@
 <!doctype html>
 <html>
     <head>
-        <title>{{ title }}</title>
-        <link rel="stylesheet" href="static/style.css" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        
         {% block head %}
+            <meta charset="utf-8" />
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <title>{% block title %}Insurance{% endblock %}</title>
+            <link rel="stylesheet" href="static/style.css" />
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         {% endblock %}
-
-
     </head>
     <body>
-        {% block content %}
+        {% block body %}
+
+        <main>
+            <div id="content">
+                {% block content %}
+                {% endblock %}
+            </div>
+        </main>
+
+        {% block flashes %}
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    <ul class=flashes>
+                    {% for category, message in messages %}
+                        <li class="alert alert-{{ category }}">{{ message }}</li>
+                    {% endfor %}
+                    </ul>
+                {% endif %}
+            {% endwith %}
+        {% endblock %}
+
+        <footer>
+            {% block footer %}
+            &copy; Bodøvision 2024 <a href="http://uit.no/">UiT</a>.
+            {% endblock %}
+        </footer>
         {% endblock %}
     </body>
 </html>
