added some templates and views change_username and password and login manager stuff

--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -12,6 +12,16 @@
     <body>
         {% block body %}
 
+        <nav>
+            {% block nav %}
+                <div class="actions">
+                    <a href="{{ url_for('main.index') }}">Index</a>
+                    <a href="{{ url_for('auth.register') }}">Register</a>
+                    <a href="{{ url_for('auth.login') }}">Login</a>
+                </div>
+            {% endblock %}
+        </nav>
+
         <main>
             <div id="content">
                 {% block content %}
