--- a/flask_app/app/templates/main/index.html
+++ b/flask_app/app/templates/main/index.html
@@ -2,13 +2,13 @@
 
 {% block content %}
     {% if current_user.is_authenticated %}
-    <h1>Hi {{ current_user.username }}!</h1>
+        <h1>Hi {{ current_user.username }}!</h1>
+
+        <a href="{{ url_for('auth.change_password') }}">Change password</a><br>
+        <a href="{{ url_for('auth.change_username') }}">Change username</a><br>
+        <a href="{{ url_for('auth.logout') }}">Logout</a><br>
+        <a href="{{ url_for('auth.delete') }}">Delete account</a><br>
     {% endif %}
 
-    <div class="actions">
-        <p><a href="{{ url_for('auth.register') }}">Register</a></p>
-        <p><a href="{{ url_for('auth.login') }}">Login</a></p>
-        <p><a href="{{ url_for('auth.logout') }}">Logout</a></p>
-    </div>
 {% endblock %}
 
