--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -4,19 +4,57 @@
         {% block head %}
             <meta charset="utf-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1">
-            <title>{% block title %}Insurance{% endblock %}</title>
             <link rel="stylesheet" href="static/style.css" />
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+            <title>{% block title %}Insurance{% endblock %}</title>
         {% endblock %}
     </head>
         <body>
             {% block body %}
-                <nav>
+                <nav class="navbar navbar-expand-lg bg-body-tertiary">
                     {% block nav %}
-                        <div class="actions">
-                            <a href="{{ url_for('main.index') }}">Index</a>
-                            <a href="{{ url_for('auth.register') }}">Register</a>
-                            <a href="{{ url_for('auth.login') }}">Login</a>
+                        <div class="container-fluid">
+                            <a class="navbar-brand" href="#">Bodovision</a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="{{ url_for('main.home') }}">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{{ url_for('insurances.insurances_list') }}">Insurances</a>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Dropdown
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item" href="#">Action</a></li>
+                                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                                            <li><hr class="dropdown-divider"></li>
+                                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                                    </li>
+                                </ul>
+                                <form class="d-flex" role="search">
+                                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                                    <button class="btn btn-outline-success" type="submit">Search</button>
+                                </form>
+                                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="{{ url_for('auth.login') }}">Login</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     {% endblock %}
                 </nav>
@@ -33,20 +71,39 @@
                 {% block flashes %}
                     {% with messages = get_flashed_messages(with_categories=true) %}
                         {% if messages %}
-                            <ul class=flashes>
-                            {% for category, message in messages %}
-                                <li class="alert alert-{{ category }}">{{ message }}</li>
-                            {% endfor %}
-                            </ul>
+                            <div class="flashes">
+                                {% for category, message in messages %}
+                                    <div class="alert alert-{{ category }} alert-dismissible fade show d-flex align-items-center" role="alert">
+                                        <!-- Add SVG icon based on the category -->
+                                        {% if category == 'info' %}
+                                            <i class="bi bi-info-circle-fill"></i>
+                                        {% elif category == 'success' %}
+                                            <i class="bi bi-check-circle-fill"></i>
+                                        {% elif category == 'warning' %}
+                                            <i class="bi bi-exclamation-circle-fill"></i>
+                                        {% else %}
+                                            <i class="bi bi-x-circle-fill"></i> 
+                                        {% endif %}
+                                        {{ message }}
+                                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                    </div>
+                                {% endfor %}
+                            </div>
                         {% endif %}
                     {% endwith %}
                 {% endblock %}
+
+            
 
                 <footer>
                     {% block footer %}
                         &copy; Bodøvision 2024 <a href="http://uit.no/">UiT</a>.
                     {% endblock %}
                 </footer>
+
+                {% block scripts %}
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+                {% endblock %}
             {% endblock %}
         </body>
 </html>
