--- a/flask_app/app/templates/main/index.html
+++ b/flask_app/app/templates/main/index.html
@@ -2,16 +2,20 @@
 
 {% block content %}
     {% if current_user.is_authenticated %}
-        <h1>Hi {{ current_user.username }}!</h1>
-
-        <a href="{{ url_for('auth.change_password') }}">Change password</a><br>
-        <a href="{{ url_for('auth.change_username') }}">Change username</a><br>
-        <a href="{{ url_for('auth.logout') }}">Logout</a><br>
-        <a href="{{ url_for('auth.delete') }}">Delete account</a><br>
-        <a href="{{ url_for('insurances.insurances_list') }}">View insurances</a><br>
-        <a href="{{ url_for('insurances.make_insurance') }}">Make new insurance</a><br>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-3">
+                    <h1 class="mt-5">Hi, {{ current_user.username }}!</h1>
+                    <div class="list-group mt-3">
+                        <a href="{{ url_for('auth.change_password') }}" class="list-group-item list-group-item-action">Change Password</a>
+                        <a href="{{ url_for('auth.change_username') }}" class="list-group-item list-group-item-action">Change Username</a>
+                        <a href="{{ url_for('auth.logout') }}" class="list-group-item list-group-item-action">Logout</a>
+                        <a href="{{ url_for('auth.delete') }}" class="list-group-item list-group-item-action">Delete Account</a>
+                        <a href="{{ url_for('insurances.insurances_list') }}" class="list-group-item list-group-item-action">View Insurances</a>
+                        <a href="{{ url_for('insurances.make_insurance') }}" class="list-group-item list-group-item-action">Make New Insurance</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     {% endif %}
-    
-
 {% endblock %}
-
