updated login, register, change_username and change_password to have bootstrap plus added remember me in loginform and login page

--- a/flask_app/app/templates/auth/change_password.html
+++ b/flask_app/app/templates/auth/change_password.html
@@ -1,17 +1,23 @@
 {% extends "base.html" %}
 
+{% block title %}Change Password{% endblock %}
+
 {% block content %}
-    <h2>Change password</h2>
-    <form method="POST" action="{{ url_for('.change_password') }}">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.current_password.label }}<br>
-            {{ form.current_password(size=32) }}
-        </p>
-        <p>
-            {{ form.new_password.label }}<br>
-            {{ form.new_password(size=32) }}
-        </p>
-        <p>{{ form.submit() }}</p>
-    </form>
+    <div class="container">
+        <h2>Change Password</h2>
+        <form method="POST" action="{{ url_for('.change_password') }}" class="mt-4">
+            {{ form.hidden_tag() }}
+            <div class="mb-3">
+                {{ form.current_password.label(class="form-label") }}
+                {{ form.current_password(class="form-control", id="current_password") }}
+            </div>
+            <div class="mb-3">
+                {{ form.new_password.label(class="form-label") }}
+                {{ form.new_password(class="form-control", id="new_password") }}
+            </div>
+            <div class="mb-3">
+                {{ form.submit(class="btn btn-primary") }}
+            </div>
+        </form>
+    </div>
 {% endblock %}
