--- a/flask_app/app/templates/auth/register.html
+++ b/flask_app/app/templates/auth/register.html
@@ -1,17 +1,24 @@
 {% extends "base.html" %}
 
+{% block title %}Register{% endblock %}
+
+
 {% block content %}
-    <h2>Register</h2>
-    <form method="POST" action="{{ url_for('.register') }}">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}
-        </p>
-        <p>
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}
-        </p>
-        <p>{{ form.submit() }}</p>
-    </form>
+    <div class="container">
+        <h2>Register</h2>
+        <form method="POST" action="{{ url_for('.register') }}" class="mt-4">
+            {{ form.hidden_tag() }}
+            <div class="mb-3">
+                {{ form.username.label(class="form-label") }}<br>
+                {{ form.username(class="form-control", size=32) }}
+            </div>
+            <div class="mb-3">
+                {{ form.password.label(class="form-label") }}<br>
+                {{ form.password(class="form-control", size=32) }}
+            </div>
+            <div class="mb-3">
+                {{ form.submit(class="btn btn-primary") }}
+            </div>
+        </form>    
+    </div>
 {% endblock %}
