--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -71,7 +71,7 @@
                 {% block flashes %}
                     {% with messages = get_flashed_messages(with_categories=true) %}
                         {% if messages %}
-                            <div class="flashes">
+                            <div class="flashes m-4">
                                 {% for category, message in messages %}
                                     <div class="alert alert-{{ category }} alert-dismissible fade show d-flex align-items-center" role="alert">
                                         <!-- Add SVG icon based on the category -->
