added autoescape to base.html

--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -61,10 +61,12 @@
 
                 <main>
                     {% block main %}
-                        <div id="content">
-                            {% block content %}
-                            {% endblock %}
-                        </div>
+                        {% autoescape true %}
+                            <div id="content">
+                                {% block content %}
+                                {% endblock %}
+                            </div>
+                        {% endautoescape %}
                     {% endblock %}
                 </main>
 
