--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -7,8 +7,8 @@
             <link rel="stylesheet" href="static/style.css" />
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-            <title>{% block title %}Insurance{% endblock %}</title>
-        {% endblock %}
+            <title>{% block title %}Insurance{% endblock title %}</title>
+        {% endblock head %}
     </head>
         <body>
             {% block body %}
@@ -56,16 +56,16 @@
                                 </ul>
                             </div>
                         </div>
-                    {% endblock %}
+                    {% endblock nav %}
                 </nav>
 
                 <main>
                     {% block main %}
                         <div id="content">
                             {% block content %}
-                            {% endblock %}
+                            {% endblock content %}
                         </div>
-                    {% endblock %}
+                    {% endblock main %}
                 </main>
 
                 {% block flashes %}
@@ -91,19 +91,19 @@
                             </div>
                         {% endif %}
                     {% endwith %}
-                {% endblock %}
+                {% endblock flashes %}
 
-            
-
+                
                 <footer>
                     {% block footer %}
                         &copy; Bodøvision 2024 <a href="http://uit.no/">UiT</a>.
-                    {% endblock %}
+                    {% endblock footer %}
                 </footer>
+
 
                 {% block scripts %}
                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-                {% endblock %}
-            {% endblock %}
+                {% endblock scripts %}
+            {% endblock body %}
         </body>
 </html>
