removed unnecessary escaping for labels and remember_me boolean in templates

--- a/flask_app/app/templates/auth/change_username.html
+++ b/flask_app/app/templates/auth/change_username.html
@@ -8,7 +8,7 @@
         <form method="POST" action="{{ url_for('.change_username') }}" class="mt-4">
             {{ form.hidden_tag() }}
             <div class="mb-3">
-                {{ form.new_username.label(class="form-label") | escape  }}
+                {{ form.new_username.label(class="form-label") }}
                 {{ form.new_username(class="form-control", id="new_username") | escape  }}
             </div>
             <div class="mb-3">
