--- a/flask_app/app/templates/auth/change_password.html
+++ b/flask_app/app/templates/auth/change_password.html
@@ -8,11 +8,11 @@
         <form method="POST" action="{{ url_for('.change_password') }}" class="mt-4">
             {{ form.hidden_tag() }}
             <div class="mb-3">
-                {{ form.current_password.label(class="form-label") | escape  }}
+                {{ form.current_password.label(class="form-label") }}
                 {{ form.current_password(class="form-control", id="current_password") | escape  }}
             </div>
             <div class="mb-3">
-                {{ form.new_password.label(class="form-label") | escape  }}
+                {{ form.new_password.label(class="form-label") }}
                 {{ form.new_password(class="form-control", id="new_password") | escape  }}
             </div>
             <div class="mb-3">
