added macros.html and cleaned up code in auth templates to use macros

--- a/flask_app/app/templates/auth/change_username.html
+++ b/flask_app/app/templates/auth/change_username.html
@@ -2,18 +2,16 @@
 
 {% block title %}Change Username{% endblock %}
 
+{% from "macros.html" import render_field, render_button_field %}
+
+
 {% block content %}
     <div class="container">
         <h2>Change Username</h2>
         <form method="POST" action="{{ url_for('.change_username') }}" class="mt-4">
             {{ form.hidden_tag() }}
-            <div class="mb-3">
-                {{ form.new_username.label(class="form-label") }}
-                {{ form.new_username(class="form-control", id="new_username") }}
-            </div>
-            <div class="mb-3">
-                {{ form.submit(class="btn btn-primary") }}
-            </div>
+            {{ render_field(form.new_username) }}
+            {{ render_button_field(form.submit) }}
         </form>
     </div>
 {% endblock %}
