--- a/flask_app/app/templates/auth/change_password.html
+++ b/flask_app/app/templates/auth/change_password.html
@@ -2,22 +2,16 @@
 
 {% block title %}Change Password{% endblock %}
 
+{% from "macros.html" import render_field, render_button_field %}
+
 {% block content %}
     <div class="container">
         <h2>Change Password</h2>
         <form method="POST" action="{{ url_for('.change_password') }}" class="mt-4">
             {{ form.hidden_tag() }}
-            <div class="mb-3">
-                {{ form.current_password.label(class="form-label") }}
-                {{ form.current_password(class="form-control", id="current_password") }}
-            </div>
-            <div class="mb-3">
-                {{ form.new_password.label(class="form-label") }}
-                {{ form.new_password(class="form-control", id="new_password") }}
-            </div>
-            <div class="mb-3">
-                {{ form.submit(class="btn btn-primary") }}
-            </div>
+            {{ render_field(form.current_password) }}
+            {{ render_field(form.new_password) }}
+            {{ render_button_field(form.submit) }}
         </form>
     </div>
 {% endblock %}
