improved on render_page_content and added it to templates

--- a/flask_app/app/templates/auth/change_password.html
+++ b/flask_app/app/templates/auth/change_password.html
@@ -2,16 +2,14 @@
 
 {% block title %}Change Password{% endblock %}
 
-{% from "macros.html" import render_field, render_button_field %}
+{% from "macros.html" import render_page_content %}
 
 {% block content %}
-    <div class="container">
-        <h2>Change Password</h2>
-        <form method="POST" action="{{ url_for('.change_password') }}" class="mt-4">
-            {{ form.hidden_tag() }}
-            {{ render_field(form.current_password) }}
-            {{ render_field(form.new_password) }}
-            {{ render_button_field(form.submit) }}
-        </form>
-    </div>
+    {{
+        render_page_content(
+            title='Change Password', 
+            form_action_url=url_for('.change_password'), 
+            form=form
+        )
+    }}
 {% endblock %}
