--- a/flask_app/app/templates/auth/login.html
+++ b/flask_app/app/templates/auth/login.html
@@ -2,11 +2,11 @@
 
 {% block title %}Login{% endblock %}
 
-{% from "macros.html" import render_page_content %}
+{% from "macros.html" import render_form %}
 
 {% block content %}
     {{
-        render_page_content(
+        render_form(
             title='Login', 
             form_action_url=url_for('.login'), 
             form=form
