--- a/flask_app/app/templates/macros.html
+++ b/flask_app/app/templates/macros.html
@@ -20,7 +20,7 @@
     </div>
 {% endmacro %}
 
-{% macro render_page_content(title, form_action_url, form, additional_content='') %}
+{% macro render_form(title, form_action_url, form, additional_content='') %}
     <div class="container">
         <h2>{{ title }}</h2>
         <form method="POST" action="{{ form_action_url }}" class="mt-4">
