--- a/flask_app/app/templates/auth/change_password.html
+++ b/flask_app/app/templates/auth/change_password.html
@@ -2,11 +2,11 @@
 
 {% block title %}Change Password{% endblock %}
 
-{% from "macros.html" import render_page_content %}
+{% from "macros.html" import render_form %}
 
 {% block content %}
     {{
-        render_page_content(
+        render_form(
             title='Change Password', 
             form_action_url=url_for('.change_password'), 
             form=form
