--- a/flask_app/app/templates/macros.html
+++ b/flask_app/app/templates/macros.html
@@ -1,27 +1,28 @@
-{% macro render_field(field) %}
+{% macro render_field(field, modifier='') %}
     <div class="mb-3">
-        {{ field.label(class="form-label") }}
-        {{ field(class="form-control", id=field.id, size=45) }}
+        {{ field.label(class="form-label " ~ modifier) }}
+        {{ field(class="form-control " ~ modifier, id=field.id, size=45) }}
     </div>
 {% endmacro %}
 
 
-{% macro render_boolean_field(field) %}
+{% macro render_boolean_field(field, modifier='') %}
     <div class="mb-3">
-        {{ field(class="form-check-input") }}
-        {{ field.label(class="form-check-label") }}
+        {{ field(class="form-check-input " ~ modifier) }}
+        {{ field.label(class="form-check-label " ~ modifier) }}
     </div>
 {% endmacro %}
 
 
-{% macro render_button_field(field) %}
+{% macro render_button_field(field, modifier='') %}
     <div class="mb-3">
-        {{ field(class="btn btn-primary") }}
+        {{ field(class="btn btn-primary " ~ modifier) }}
     </div>
 {% endmacro %}
 
-{% macro render_page_content(title, form_action_url, form, additional_content='') %}
-    <div class="container">
+
+{% macro render_page_content(title, form_action_url, form, modifier='') %}
+    <div class="container {{ modifier }}">
         <h2>{{ title }}</h2>
         <form method="POST" action="{{ form_action_url }}" class="mt-4">
             {{ form.hidden_tag() }}
@@ -34,7 +35,6 @@
                     {{ render_field(field) }}
                 {% endif %}
             {% endfor %}
-            {{ additional_content }}
         </form>
     </div>
 {% endmacro %}
