--- a/flask_app/app/templates/insurances/make_insurance.html
+++ b/flask_app/app/templates/insurances/make_insurance.html
@@ -1,21 +1,48 @@
 {% extends "base.html" %}
 
+{% block title %}Register Insurance{% endblock %}
+
 {% block content %}
-    <h1>Make Insurance</h1>
-    <form method="POST" action="{{ url_for('insurances.make_insurance') }}">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.label.label }}<br>
-            {{ form.label(size=32) }}
-        </p>
-        <p>
-            {{ form.price.label }}<br>
-            {{ form.price(size=32) }}
-        </p>
-        <p>
-            {{ form.company.label }}<br>
-            {{ form.company(size=32) }}
-        </p>
-        <p>{{ form.submit() }}</p>
-    </form>
+    <div class="container">
+        <h2>Register Insurance</h2>
+        <form method="POST" action="{{ url_for('.make_insurance') }}" class="mt-4">
+            {{ form.hidden_tag() }}
+            <div class="mb-3">
+                {{ form.label.label(class="form-label") | escape }}
+                {{ form.label(class="form-control", id="label") | escape }}
+            </div>
+            <div class="mb-3">
+                {{ form.unit_type_id.label(class="form-label") | escape }}
+                {{ form.unit_type_id(class="form-select", id="unit_type_id") | escape }}
+            </div>
+            <div class="mb-3">
+                {{ form.value.label(class="form-label") | escape }}
+                {{ form.value(class="form-control", id="value") | escape }}
+            </div>
+            <div class="mb-3">
+                {{ form.price.label(class="form-label") | escape }}
+                {{ form.price(class="form-control", id="price") | escape }}
+            </div>
+            <div class="mb-3">
+                {{ form.due_date.label(class="form-label") | escape }}
+                {{ form.due_date(class="form-control", id="due_date") | escape }}
+            </div>
+            <div class="mb-3">
+                <label for="company_id" class="form-label">{{ form.company_id.label }}</label>
+                <select name="company_id" id="company_id" class="form-select">
+                    {% for company in companies %}
+                    <option value="{{ company[0].id }}">{{ company[0].name }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="mb-3">
+                {{ form.submit(class="btn btn-primary") }}
+            </div>
+
+
+
+            
+
+        </form>
+    </div>
 {% endblock %}
