lagd settlement knapp, og fjernet disabled knapp

--- a/flask_app/app/templates/settlements/settlements_list.html
+++ b/flask_app/app/templates/settlements/settlements_list.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-    <h1>Insurances</h1>
+    <h1>Settlements</h1>
 
     <table class = "table"> <!--ikke slett-->
         <tr>
