--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -29,6 +29,9 @@
                                         <li class="nav-item">
                                             <a class="nav-link" href="{{ url_for('insurances.insurances_list') }}">Insurances</a>
                                         </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="{{ url_for('settlements.settlement_list') }}">Settlements</a>
+                                        </li>
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                 Dropdown
@@ -39,9 +42,6 @@
                                                 <li><hr class="dropdown-divider"></li>
                                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                                             </ul>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                                         </li>
 
                                     </ul>
