--- a/flask_app/app/templates/settlements/make_settlement.html
+++ b/flask_app/app/templates/settlements/make_settlement.html
@@ -9,8 +9,8 @@
             {{ form.hidden_tag() }}
 
             <div class="mb-3">
-                {{ form.insurance_id.label(class="form-label") }}
-                {{ form.insurance_id(class="form-control") }}
+                {{ form.insurance_label.label(class="form-label") }}
+                {{ form.insurance_label(class="form-select") }}
             </div>
             <div class="mb-3">
                 {{ form.description.label(class="form-label") }}
