--- a/flask_app/app/templates/settlements/settlements_list.html
+++ b/flask_app/app/templates/settlements/settlements_list.html
@@ -7,16 +7,14 @@
 
     <table class = "table"> <!--ikke slett-->
         <tr>
-            <th style="font-size: 18px;">id</th>
-            <th style="font-size: 18px;">insurance id</th>
-            <th style="font-size: 18px;">description</th>
-            <th style="font-size: 18px;">sum</th>
+            <th style="font-size: 18px;">Insurance</th>
+            <th style="font-size: 18px;">Description</th>
+            <th style="font-size: 18px;">Sum(kr)</th>
         </tr>
 
         {% for settlement in settlements %}
             <tr>
-                <td>{{ settlement.id }}</td>
-                <td>{{ settlement.insurance_id }}</td>
+                <td>{{ settlement.insurance.label }}</td>
                 <td>{{ settlement.description }}</td>
                 <td>{{ settlement.sum }}</td>
             </tr>
