--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -34,6 +34,17 @@
                                     </li>
                                 </ul>
                                 <ul class="navbar-nav">
+                                    <li class="nav-item dropdown">
+                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                Account
+                                            </a>                                        
+                                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                            <li><a class="dropdown-item" href="{{ url_for('auth.change_password') }}">Change Password</a></li>
+                                            <li><a class="dropdown-item" href="{{ url_for('auth.change_username') }}">Change Username</a></li>
+                                            <li><hr class="dropdown-divider"></li>
+                                            <li><a class="dropdown-item" href="{{ url_for('auth.delete') }}">Delete Account</a></li>
+                                          </ul>
+                                    </li>
                                     <li class="nav-item">
                                         <a class="nav-link active" aria-current="page" href="{{ url_for('auth.logout') }}">Logout</a>
                                     </li>
