Added delete form for delete request

--- a/flask_app/app/templates/auth/delete.html
+++ b/flask_app/app/templates/auth/delete.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-    <h2>Delete account</h2>
-    <form method="POST" action="{{ url_for('.delete') }}">
+    <h2 class="text-center">Delete account</h2>
+    <form method="POST" action="{{ url_for('.delete') }}" class="form">
         {{ form.hidden_tag() }}
-        <p>Are you sure you want to delete your account?</p>
-        <p>{{ form.submit() }}</p>
+        <p class="text-center">Are you sure you want to delete your account?</p>
+        <p class="text-center">{{ form.submit(class="btn btn-danger") }}</p>
     </form>
 {% endblock %}
