Added details to navbar

--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -39,6 +39,7 @@
                                                 Account
                                             </a>                                        
                                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                            <li><a class="dropdown-item" href="{{ url_for('auth.details') }}">Details</a></li>
                                             <li><a class="dropdown-item" href="{{ url_for('auth.change_password') }}">Change Password</a></li>
                                             <li><a class="dropdown-item" href="{{ url_for('auth.change_username') }}">Change Username</a></li>
                                             <li><hr class="dropdown-divider"></li>
