added admin incase user is admin

--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -34,6 +34,16 @@
                                     </li>
                                 </ul>
                                 <ul class="navbar-nav">
+                                    {% if current_user.is_admin %}
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Admin
+                                        </a>                                        
+                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                            <a class="nav-link active" href="{{ url_for('auth.list') }}">Users</a>
+                                        </ul>
+                                    </li>
+                                    {% endif %}
                                     <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                 Account
