added home for admin dashboard

--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -40,6 +40,7 @@
                                             Admin
                                         </a>                                        
                                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                            <a class="nav-link active" href="{{ url_for('admin.index') }}">dashboard</a>
                                             <a class="nav-link active" href="{{ url_for('auth.list') }}">Users</a>
                                         </ul>
                                     </li>
